# Spotify-music

./: Dockerfile  Procfile  config.py  docker-compose.yml  koyeb.yaml  pyproject.toml  render.yaml  setup  sourcery.yaml
.github/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.yml
KanhaMusic/: logging.py  misc.py
KanhaMusic.egg-info/: PKG-INFO  entry_points.txt
KanhaMusic/core/: git.py  mongo.py  userbot.py
KanhaMusic/plugins/admins/: auth.py  loop.py  resume.py  seek.py  shuffle.py
KanhaMusic/plugins/bot/: help.py  inline.py  settings.py
KanhaMusic/plugins/misc/: autoleave.py  broadcast.py  watcher.py
KanhaMusic/plugins/play/: play.py  playmode.py
KanhaMusic/plugins/sudo/: autoend.py  block.py
KanhaMusic/plugins/tools/: dev.py  disk.py  language.py  queue.py
KanhaMusic/utils/: __init__.py  extraction.py  formatters.py  inlinequery.py  pastebin.py  sys.py
KanhaMusic/utils/decorators/: play.py
KanhaMusic/utils/inline/: __init__.py
KanhaMusic/utils/stream/: autoclear.py  queue.py  stream.py
strings/: __init__.py
