[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "KanhaMusic"
version = "0.1.0"
description = "🎵 Advanced Telegram Music Bot by OyeKanhaa — PyroFork + ntgcalls + YouTube + Spotify"
readme = "README.md"

requires-python = ">=3.10,<3.13"

license = { text = "MIT" }

authors = [
  { name = "OyeKanhaa", email = "OyeKanhaa@github.com" }
]

keywords = ["telegram", "music", "bot", "pyrogram", "pyrofork", "pytgcalls", "youtube", "spotify"]

classifiers = [
  "Environment :: Console",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet",
  "Topic :: Utilities",
]

dependencies = [
  "aiofiles>=23.2.1",
  "aiohttp>=3.9.5",
  "apscheduler>=3.10.4",
  "beautifulsoup4>=4.12.3",
  "dnspython>=2.6.1",
  "gitpython>=3.1.43",
  "hachoir>=3.2.0",
  "httpx>=0.27.0",
  "humanize>=4.9.0",
  "requests>=2.32.3",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.1",
  "unidecode>=1.3.8",
  "tgcrypto>=1.2.5",
  "pyrofork>=2.3.45",
  "ffmpeg-python>=0.2.0",
  "ntgcalls==2.0.6",
  "py-tgcalls==2.2.8",
  "motor>=3.4.0",
  "psutil>=5.9.8",
  "heroku3>=5.2.1",
  "Pillow==12.0.0",
  "speedtest-cli>=2.1.3",
  "yt-dlp>=2024.8.6",
  "youtube-search>=2.1.2",
  "youtube-search-python>=1.6.6",
  "py-yt-search==0.5.4",
  "spotipy>=2.24.0",
  "openai>=1.40.0",
  "prettytable>=3.12.0"
]

[tool.setuptools.packages.find]
include = ["KanhaMusic", "core", "config", "strings"]

[project.urls]
Repository = "https://github.com/OyeKanhaa/KanhaMusic"
Issues = "https://github.com/OyeKanhaa/KanhaMusic/issues"
Changelog = "https://github.com/OyeKanhaa/KanhaMusic/blob/master/CHANGELOG.md"

[project.scripts]
KanhaMusic = "KanhaMusic.__main__:main"
